--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.15.4
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
+  firebase_messaging: ^14.7.21
 
 dev_dependencies:
   flutter_test:
