--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
   firebase_messaging: ^14.7.21
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -108,5 +109,5 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo-icon.png"
+  image_path: "assets/logo-app.png"
   min_sdk_android: 21
